temporal-verifier/tests/examples/snapshots/fail/basic.fly.z3.snap
---
source: temporal-verifier/tests/test_examples.rs
description: "--expect-fail --all-solvers -- verify tests/examples/fail/basic.fly"
expression: combined_stdout_stderr
---

======== STDERR: ===========
verification errors:
error: init does not imply invariant
 = counter example:
   p(@thread_0) = false
   q = false
   t0 = @thread_0


