temporal-verifier/tests/examples/snapshots/fail/safety1_proof_invariants.fly.houdini.snap
---
source: tests/test_examples.rs
description: "--name=houdini -- infer houdini tests/examples/fail/safety1_proof_invariants.fly"
expression: combined_stdout_stderr
---
# inferred invariant:
assert always !p
proof {
  invariant !p
  invariant !p
  invariant !q
}
verifies!

======== STDERR: ===========

