temporal-verifier/tests/examples/snapshots/fail/safety3_extra_inv.fly.1.cvc5.snap
---
source: temporal-verifier/tests/test_examples.rs
description: "--expect-fail --all-solvers --name=1 -- verify tests/examples/fail/safety3_extra_inv.fly"
expression: combined_stdout_stderr
---

======== STDERR: ===========
verification errors:
error: invariant is not inductive
 = counter example:
   x = true
   y = true
   z = true


